--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       </div>
       <div class="col-6 position-relative">
         <div class="position-absolute top-50 end-0 translate-middle-y">
-          <h1>About Me</h1>
+          <h1 class="text-white fs fw-bolder">About Me</h1>
           <h4 class="fs fw-bolder">Developer <span class="text-danger">& Designer</span></h4>
           <p>I am a front-end web developer. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex repellat
             commodi, veritatis quos autem quod numquam ea voluptate voluptas voluptatibus doloribus similique molestiae,
