--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body class="bg-dark">
-  <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark" data-bs-theme="dark">
     <div class="container">
       <a class="navbar-brand fw-bolder" href="#">Port<span class="text-danger">folio</span></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -45,7 +45,7 @@
         </ul>
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+          <button class="btn btn-outline-light" type="submit">Search</button>
         </form>
       </div>
     </div>
@@ -71,16 +71,16 @@
   <!-- About Section Start -->
   <div class="container text-body bg-body" data-bs-theme="dark">
     <div class="row mt-5 pb-5">
-      <div class="col-6">
-        <img src="https://i.pinimg.com/474x/0a/76/b0/0a76b02288ada35a40aaac0cfb2b48ee.jpg" alt="">
+      <div class="col-12 col-lg-6 col-md-12">
+        <img src="https://i.pinimg.com/474x/0a/76/b0/0a76b02288ada35a40aaac0cfb2b48ee.jpg" alt="" class="w-100">
       </div>
-      <div class="col-6 position-relative">
-        <div class="position-absolute top-50 end-0 translate-middle-y">
+      <div class="col-12 col-lg-6 col-md-12 position-relative-lg mt-4">
+        <div class="position-absolute-lg top-lg-50">
           <h1 class="text-white fs fw-bolder">About Me</h1>
           <h4 class="fs fw-bolder">Developer <span class="text-danger">& Designer</span></h4>
           <p>I am a front-end web developer. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex repellat
             commodi, veritatis quos autem quod numquam ea voluptate voluptas voluptatibus doloribus similique molestiae,
-            rerum, deleniti tempore sed. Delectus, magni.</p>
+            rerum, deleniti tempore sed. Delectus, magni. Lorem ipsum dolor sit amet consectetur adipisicing elit. A commodi quibusdam exercitationem temporibus itaque cumque porro obcaecati dolorem, nihil corporis laborum! Saepe quaerat modi ipsam perspiciatis odio voluptas repudiandae officia! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur in eligendi pariatur sapiente eum! Eligendi, fugit quo. Similique vel temporibus enim quis, ut voluptatum sit magnam, beatae odio voluptates in. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam est animi reprehenderit autem modi perspiciatis qui, assumenda ipsa beatae possimus blanditiis nostrum sapiente debitis! In eligendi dolorum ullam expedita at!</p>
           <button class="btn btn-danger rounded-pill px-4">Let's Talk</button>
         </div>
       </div>
@@ -92,36 +92,36 @@
   <div class="container text-body bg-body mt-3" data-bs-theme="dark">
     <h1 class="text-white text-center fs fw-bolder">My Recent Works</h1>
     <div class="row mt-4">
-      <div class="col-4">
+      <div class="col-lg-4 col-md-4 col-12 mb-3">
         <div class="card" style="width: 100%;">
           <img src="https://img.freepik.com/free-vector/mobile-phone-surrounded-by-colorful-app-icons_52683-23825.jpg"
             class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Social Networking Application</h5>
+            <h5 class="card-title">Ecom <span class="text-danger">Application</span></h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
               content.</p>
             <a href="#" class="btn btn-danger rounded-pill px-4">Read More</a>
           </div>
         </div>
       </div>
-      <div class="col-4">
+      <div class="col-lg-4 col-md-4 col-12 mb-3">
         <div class="card" style="width: 100%;">
           <img src="https://img.freepik.com/premium-vector/trendy-vector-design-todo-list_362714-747.jpg"
             class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">To Do Application</h5>
+            <h5 class="card-title">To Do <span class="text-danger">Application</span></h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
               content.</p>
             <a href="#" class="btn btn-danger rounded-pill px-4">Read More</a>
           </div>
         </div>
       </div>
-      <div class="col-4">
+      <div class="col-lg-4 col-md-4 col-12 mb-3">
         <div class="card" style="width: 100%;">
           <img src="https://i.pinimg.com/736x/29/d9/0b/29d90b183be6d21ba0f72d53f66409a3.jpg" class="card-img-top"
             alt="...">
           <div class="card-body">
-            <h5 class="card-title">Weather Application</h5>
+            <h5 class="card-title">Weather <span class="text-danger">Application</span></h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
               content.</p>
             <a href="#" class="btn btn-danger rounded-pill px-4">Read More</a>
